# Game-Vault

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: games.rs  mod.rs  settings.rs  stats.rs
src-tauri/src/core/: cover_fetcher.rs  database.rs  launcher.rs  llm_fetcher.rs  mod.rs  tracker.rs
src-tauri/src/models/: game.rs  mod.rs  play_session.rs  settings.rs
src-tauri/src/utils/: constants.rs  error.rs  mod.rs  path.rs
src/components/: AboutModal.vue  ContextMenu.vue  CoverPickerModal.vue  GameCard.vue  GameDetail.vue  GameInfoEditModal.vue
src/data/: changelog.ts
src/lib/: color.ts  constants.ts  format.ts  tauri.ts  useCoverImage.ts
src/stores/: games.ts
src/views/: HomeView.vue  SettingsView.vue  StatsView.vue
